# runanywhere-sdks-go

./: .gitignore  Taskfile.yml
.github/workflows/: codeql.yml  go-sdk.yml  server-docker.yml
gradle/: libs.versions.toml
sdk/runanywhere-commons/: Dockerfile.server  README.md
sdk/runanywhere-commons/scripts/: smoke-test-server.sh
sdk/runanywhere-commons/src/server/: CMakeLists.txt  http_server.cpp  http_server.h  openai_handler.cpp  openai_handler.h
sdk/runanywhere-commons/tests/scripts/: download-test-models.sh
sdk/runanywhere-commons/tools/: CMakeLists.txt  runanywhere-server.cpp
sdk/runanywhere-go/: README.md  client.go  client_test.go  code-review-verification.md  code-review.md  doc.go  go.mod  server.go  stream.go  stream_test.go  transport_wasm.go  types.go  types_test.go
sdk/runanywhere-go/cmd/runanywhere-wasi-host/: bench_test.go  host_test.go  main.go
sdk/runanywhere-go/cmd/runanywhere-wasm/: main.go
sdk/runanywhere-go/device/: backend_capabilities.go  backend_interfaces.go  bench_test.go  chain.go  circuit_breaker.go  context_helpers.go  device_stub_test.go  device_test.go  doc.go  embeddings_cgo.go  embeddings_stub.go  embeddings_wasi.go  embeddings_wasm.go  errors.go  events.go  handle_registry.go  handle_registry_test.go  host_wasi.go  init_cgo.go  init_stub.go  init_wasi.go  init_wasm_browser.go  llm_cgo.go  llm_stub.go  llm_wasi.go  llm_wasm.go  llm_wasm_test.go  logger.go  metrics.go  stream_frame.go  stt_cgo.go  stt_stub.go  stt_wasi.go  stt_wasm.go  stt_wasm_test.go  tts_cgo.go  tts_stub.go  tts_wasi.go  tts_wasm.go  types.go  (+2 more)
sdk/runanywhere-go/docs/: kubernetes-deployment.md  wasi-host-contract.md
sdk/runanywhere-go/examples/basic-chat/: README.md  go.mod  main.go
sdk/runanywhere-go/examples/device-chat/: README.md  go.mod  main.go
sdk/runanywhere-go/examples/embeddings/: README.md  go.mod  main.go
sdk/runanywhere-kotlin/: gradle.properties
(+11 files in other folders)
